feat: add movies & single movie pages

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .input {
+    @apply outline-none placeholder:text-gray-400 bg-transparent w-full px-2 py-2  mr-8;
+  }
+}
+
 @layer base {
   @font-face {
     font-family: "Helvetica";
