--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,32 @@
     rgba(0, 212, 255, 0) 99%
   );
 }
+
+@layer components {
+  .my-react-select-container .my-react-select__control {
+    @apply bg-transparent outline-none ring-0 border-gray-500  text-left;
+  }
+
+  .my-react-select-container .my-react-select__control--is-focused {
+    @apply border-gray-500 ring-0;
+  }
+
+  .my-react-select-container .my-react-select__menu {
+    @apply bg-[#374151] text-white;
+  }
+
+  .my-react-select-container .my-react-select__option {
+    @apply text-white hover:bg-gray-800 cursor-pointer;
+  }
+  .my-react-select-container .my-react-select__multi-value {
+    @apply text-white bg-gray-400;
+  }
+
+  .my-react-select-container .my-react-select__multi-value__label {
+    @apply text-white;
+  }
+
+  .my-react-select-container .my-react-select__indicator-separator {
+    @apply bg-gray-700;
+  }
+}
