--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,7 @@
   }
 
   .my-react-select-container .my-react-select__option {
-    @apply text-white hover:bg-gray-800 cursor-pointer;
+    @apply text-white bg-gray-600  hover:bg-gray-800 cursor-pointer;
   }
   .my-react-select-container .my-react-select__multi-value {
     @apply text-white bg-gray-400;
